--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
 
     <link rel="stylesheet" href="CSS CV style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Cette balise me permet de rendre le adapté aux appareils mobiles -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MON PORTFOLIO</title>
 
   </head>
 
+  <body>
+
+    <h1>
+      BIENVENUE SUR MON PORTFOLIO
+    </h1>
+    
+  </body>
+  
 </html>
